inventorymaker: fix tooltip z-index

--- a/inventorymaker/style/workspace.css
+++ b/inventorymaker/style/workspace.css
@@ -98,6 +98,7 @@ main > h3 {
 }
 
 #item-tooltip {
+    z-index: 100;
     position: absolute;
     padding: 0 8px;
     background-color: #000;
